manifests/deployment.yml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: aws-example-octodex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-example-octodex
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: aws-example-octodex
    spec:
      containers:
      - name: aws-example-octodex
        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
        # image: REGISTRY/REPO:TAG
        # The full image will be dynamically added by Kustomize in the workflow.
        image: 264322735540.dkr.ecr.ap-southeast-1.amazonaws.com/testingeks:a32834ef0b1dfc68a63fbf20f1dad5ca9237101d
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
