manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "aws-example-octodex-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: aws-example-octodex-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              service:
                name: "aws-example-octodex"
                port:
                  number: 80
